Bug 1279962 - Fall back to getting the CGFontRef from NSFont to support hidden system fonts on 10.12. r=jfkthame, a=gchang

MozReview-Commit-ID: pp9WC3twsl

--HG--
extra : source : faf57f9dbeee9b688489b44b1a43af60591de815